UI fix for screen shifting towards left

--- a/UI/src/app/dashboardv2/filter-v2/filter-new.component.css
+++ b/UI/src/app/dashboardv2/filter-v2/filter-new.component.css
@@ -1,11 +1,17 @@
 .filter-container {
-    background-color: #fff;
+    background-color: #F5F9FF;
     font-size: 0.75rem;
 }
 
 :host ::ng-deep .p-float-label .p-inputwrapper-filled ~ label {
     font-size: 0.75rem;
     
+}
+
+:host ::ng-deep .p-multiselect-panel,
+:host ::ng-deep .p-dropdown-panel {
+    top: unset !important;
+    z-index: 1002;
 }
 
 :host ::ng-deep .p-multiselect-panel .p-multiselect-items .p-multiselect-item,
@@ -18,6 +24,7 @@
 .tabs {
     display: flex;
     margin-left: 30px;
+    margin-right: 100px;
 }
 
 .tab {
